--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
 
   <main class="conteudo">
+    <img class="qrcode" src="images/image-qr-code.png" alt="QR code">
     <h1>Improve your front-end skills by building projects</h1>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </main> 
-  <footer>
+  <footer class="rodape">
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Jonathan Hora</a>.
